--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.6.1",
-    "antd": "^5.24.4",
+    "antd": "^5.25.4",
     "axios": "^1.8.2",
     "cra-template-redux": "2.0.0",
     "react": "^19.0.0",
