--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "swiper": "^11.2.6"
   },
  "scripts": {
-  "start": "serve -s build",
-  "build": "react-scripts build",
+  "start": "react-scripts start",    
+    "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
